[metadata]
name = linkwort
summary = Markdown linter
description-file =
    README.md
author = Lars Kellogg-Stedman
author-email = lars@oddbit.com

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    linkwort

[entry_points]
console_scripts =
    linkwort = linkwort.main:main

[wheel]
universal = 1

[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true

[flake8]
ignore = E731
